--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@fortawesome/free-solid-svg-icons": "6.2.0",
     "@fortawesome/react-fontawesome": "0.2.0",
     "@reduxjs/toolkit": "1.8.5",
+    "@syncfusion/ej2-react-charts": "^20.3.57",
     "axios": "0.27.2",
     "bootstrap": "5.2.0",
     "dayjs": "1.11.5",
